Compiler/tests/typing/bad/testfile-assign-2.rs

fn main() { let x = 42; let y = 89; (x+y) = 2; }
